--- a/MarketResearch/test-output/index.html
+++ b/MarketResearch/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-TestNG">
-                    <span>C:\Users\puja\git\MarketTestRepo\MarketResearch\TestNG.xml</span>
+                    <span>C:\Users\puja\git\MarketTestRepo\MarketResearch\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -135,14 +135,14 @@
         </div> <!-- panel TestNG -->
         <div panel-name="test-xml-TestNG" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\puja\git\MarketTestRepo\MarketResearch\TestNG.xml</span>
+            <span class="header-content">C:\Users\puja\git\MarketTestRepo\MarketResearch\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;TestNG&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;TestNG&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;TestNG&quot; parallel=&quot;classes&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;TestNG&quot; parallel=&quot;classes&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.qa.test.LoginTest&quot;/&gt;
     &lt;/classes&gt;
@@ -188,12 +188,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testLoginByProp')
 data.setCell(0, 2, 'com.qa.test.LoginTest')
-data.setCell(0, 3, 38362);
+data.setCell(0, 3, 27500);
 window.suiteTableData['TestNG']= { tableData: data, tableDiv: 'times-div-TestNG'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 38 seconds</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-TestNG">
               </div> <!-- times-div-TestNG -->
             </div> <!-- times-div -->
@@ -226,7 +226,7 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">testLoginByProp</span>
-                <span class="method-start">4 ms</span>
+                <span class="method-start">6 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
